<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#009688"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/panjang"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lebar"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tinggi"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnHitung"
        android:onClick="clickHitung"
        android:text="@string/hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvHasil"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>